# BE-interview-todo

./: .editorconfig  .gitignore  README.md  pyproject.toml
app/: __init__.py  database.py  main.py
app/api_schemas/: __init__.py
app/api_schemas/todo/: __init__.py  todo_item.py  todo_item_schema.py
app/logic/: todo_item_logic.py
app/models/: __init__.py  todo_item.py
app/routers/: __init__.py
app/routers/todo/: items.py
app/utils/: date_time_utils.py
tests/: conftest.py
tests/integration/: test_todo_items_api.py
