[project]
name = "todo"
version = "0.1.0"
description = "Toy TODO app for BE interviews"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.14",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-timeout>=2.4.0",
]


[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
pythonpath = ["."]
python_files = [
    "tests/**/test_*.py",
]
timeout = 10
asyncio_mode = "auto"
